Fixed hero img alignment

--- a/sass/responsive/_responsive.scss
+++ b/sass/responsive/_responsive.scss
@@ -11,6 +11,8 @@
     .site-footer__top:before { max-width: calc(100% - 30px); }
 
 	.container { max-width: 100% !important; }
+
+	.hero-text-img { text-align: right; }
 }
 
 @media (max-width: 991px) {
